--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,10 @@ RSpec/SubjectStub:
 RSpec/NestedGroups:
   Max: 5
 
+RSpec/MultipleMemoizedHelpers:
+  Exclude:
+    - 'spec/registration_stage_console_spec.rb'
+
 RSpec/MessageSpies:
   Enabled: false
 
